--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
 	<packaging>jar</packaging>
 
 	<name>jtrfp</name>
-	<url>http://code.google.com/p/jtrfp/</url>
+	<description>Java tools and file parsers for Terminal Reality games</description>
+	<url>http://www.jtrfp.org/</url>
   
   	<developers>
 		<developer>
@@ -32,48 +33,53 @@
         </license>
     </licenses>
 
+	<scm>
+		<url>git@github.com:jtrfp/jtrfp</url>
+		<connection>scm:git:git@github.com:jtrfp/jtrfp.git</connection>
+		<developerConnection>scm:git:git@github.com:jtrfp/jtrfp.git</developerConnection>
+	</scm>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<maven.compiler.source>1.6</maven.compiler.source>
 	</properties>
 
-	<build>
-	    <plugins>
-	        <plugin>
-	            <artifactId>jdeb</artifactId>
-	            <groupId>org.vafer</groupId>
-	            <version>0.11</version>
-	            <executions>
-	                <execution>
-	                    <phase>package</phase>
-	                    <goals>
-	                        <goal>jdeb</goal>
-	                    </goals>
-	                    <configuration>
-	                        <dataSet>
-	                            <data>
-	                                <src>${project.build.directory}/${project.build.finalName}.jar</src>
-	                                <type>file</type>
-	                                <mapper>
-	                                  <type>perm</type>
-	                                  <prefix>/usr/share/jdeb/lib</prefix>
-	                                </mapper>
-	                            </data>
-	                        </dataSet>
-	                    </configuration>
-	                </execution>
-	            </executions>
-	        </plugin>
-	    </plugins>
-	</build>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.10</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.5.1</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>nexus-releases</serverId>
+					<nexusUrl>https://oss.sonatype.org</nexusUrl>
+					<stagingProfileId>1f138f325160b3</stagingProfileId>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
