--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,14 @@
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
 	</properties>
-
+	
+	<repositories>
+    	<repository>
+    		<id>jitpack.io</id>
+    		<url>https://jitpack.io</url>
+		</repository>
+  	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
@@ -58,9 +65,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jtrfp</groupId>
-			<artifactId>jfdt</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
+    		<groupId>com.github.jtrfp</groupId>
+    		<artifactId>jfdt</artifactId>
+    		<version>master-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
