--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,14 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<repository>
+		<id>ossrh</id>
+		<name>Central Repository OSSRH</name>
+		<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 	
 	<profiles>
 	    <profile>
