--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,61 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+	        <id>deploy</id>
+			<build>
+				<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>3.3.1</version>
+					<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+						<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.11.2</version>
+					<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+						<goal>jar</goal>
+						</goals>
+					</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.sonatype.central</groupId>
+					<artifactId>central-publishing-maven-plugin</artifactId>
+					<version>0.7.0</version>
+					<extensions>true</extensions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<version>3.2.7</version>
+					<configuration>
+						<signer>bc</signer>
+					</configuration>
+					<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+						<goal>sign</goal>
+						</goals>
+					</execution>
+					</executions>
+				</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 </project>
