--- a/.github/workflows/gh-packages.yml
+++ b/.github/workflows/gh-packages.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - name: Set version
+        run: mvn versions:set -DnewVersion=${{ github.event.release.tag_name }}
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
