--- a/.github/workflows/maven-central.yml
+++ b/.github/workflows/maven-central.yml
@@ -18,6 +18,8 @@ jobs:
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
+      - name: Set version
+        run: mvn versions:set -DnewVersion=${{ github.event.release.name }}
       - name: Publish to the Maven Central Repository
         run: mvn --batch-mode deploy
         env:
