--- a/.github/workflows/maven-central.yml
+++ b/.github/workflows/maven-central.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
-          server-id: central
+          server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Set version
