--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,17 @@
 		</dependency>
 	</dependencies>
 
+	<distributionManagement>
+		<snapshotRepository>
+		<id>central</id>
+		<url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		</snapshotRepository>
+		<repository>
+		<id>central</id>
+		<url>https://central.sonatype.com/</url>
+		</repository>
+	</distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
